# Engine

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Source/: CMakeLists.txt  imconfig_custom.h  main.cpp
Source/Collision/: Intersections.cpp  Intersections.h
Source/Commands/: Command.h  CreateEntityCommand.cpp  CreateEntityCommand.h  DeleteEntityCommand.cpp  DeleteEntityCommand.h  UndoManager.cpp  UndoManager.h
Source/Core/: Events.cpp  Events.h  Font.cpp  Font.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  ThreadPool.h  Timer.h  Window.cpp  Window.h
Source/Editor/: ComponentEditor.h  Tile.cpp  Tile.h  TileAtlas.cpp  TileAtlas.h
Source/EntityComponentSystem/: ComponentHelper.h  Components.h  Entity.h  EntityManager.h  EntityMemoryPool.h  TupleHelper.h
Source/EntityComponentSystem/Systems/: AnimationSystem.cpp  AnimationSystem.h  BaseSystem.h  EditorSystem.cpp  EditorSystem.h  MovementSystem.cpp  MovementSystem.h  PathfindingSystem.cpp  PathfindingSystem.h
Source/Input/: Action.cpp  Action.h  Input.cpp  Input.h  InputManager.h  InputMisc.h  RawInput.h
Source/Input/Conditions/: Condition.h  PressedCondition.h  ReleasedCondition.h  TapCondition.h
Source/Input/Modifiers/: DeadZoneModifier.h  DeadzoneModifier.h  DeltaTimeModifier.h  Modifier.h  NegateModifier.h  ScalarModifier.h  SwizzleModifier.h
Source/Maths/: Rectangle.h  Vector2.h
Source/Pathfinding/: NavigationGraph.cpp  NavigationGraph.h
Source/SceneManagement/: BaseScene.h  IGrid.h  IsometricScene.cpp  IsometricScene.h  SceneManager.cpp  SceneManager.h
Tests/: CMakeLists.txt
Tests/Collision/: CollisionTests.cpp
Tests/Commands/: CommandTests.cpp  CreateEntityCommandTests.cpp
Tests/Maths/: RectangleTests.cpp  Vector2Tests.cpp
Tests/SceneManagement/: IsometricSceneTests.cpp
